fixed button overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
 .calculator {
     height: 450px;
     width: 350px;
+    border: 2px solid white;
 }
 
 .display {
@@ -33,9 +34,9 @@ body {
 .button {
     font-size: 1.3rem;
     width: 25%;
-    height: 25%;
+    height: 20%;
     background-color: transparent;
-    border: 2px solid white ;
+    border: 2px solid white;
 }
 
 .display {
